Speed up slow backend unit tests by trimming redundancy and context.
Drop duplicate tests, replace NullToNotFound integration with a fast advice unit test, move failure-report user info to FailureReportFactoryTest, merge extract-note AI param checks, stub GitHub in ControllerSetup, and use minimal image fixtures.

Co-authored-by: Cursor <cursoragent@cursor.com>